cmake_minimum_required(VERSION 3.13)
include(pico_sdk_import.cmake)
project(remote_project C CXX ASM) 
set(CMAKE_C_STANDARD 11) 
set(CMAKE_CXX_STANDARD 17) 
pico_sdk_init()
add_executable(remoter adc.c beep.c main.c oled.c ppm.c spi.c sx1280.c sx1280-hal.c sys_config.c wireless_trans.c)
pico_enable_stdio_usb(remoter 1)
pico_enable_stdio_uart(remoter 1)
pico_add_extra_outputs(remoter) 
target_link_libraries(remoter pico_stdlib hardware_adc hardware_spi hardware_clocks hardware_pwm pico_multicore hardware_i2c)
